--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "My Moleculer-based microservices project",
   "scripts": {
     "dev": "node server.js",
-    "start": "moleculer-runner",
+    "start": "node server.js",
+    "build": "npm install --prefix frontend && npm run build --prefix frontend",
     "cli": "moleculer connect ",
     "ci": "jest --watch",
     "test": "jest --coverage",
