--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,7 @@
     "axios": "^1.13.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-intersection-observer": "^10.0.0",
-    "testovoe-cifrovie-reshenia": "file:.."
+    "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
